# bdd-comply-studio

./: .gitignore  README.md  pyproject.toml
backend/: ai_agent.py  bdd_agent.py  bdd_execution_agent.py  compliance_agent.py  frontend_server.py  sample_banking_service.py  workflow.py
backend/prompts/: llm_prompts.py
frontend/: index.html  streamlit_app.py
specs/: customer-onboarding.json  get-account-swagger-specs.json  openapi.json  products.json  transactions.json
tests/unit/: test_controller_source_workflow.py
