[project]
name = "finance-technical-content-creator"
version = "0.1.0"
description = "Sample banking API simulator and Karate BDD generation agent."
requires-python = ">=3.9"

[project.scripts]
run-service = "backend.sample_banking_service:main"
generate-bdd = "backend.bdd_agent:main"
execute-bdd = "backend.bdd_execution_agent:main"
validate-compliance = "backend.compliance_agent:main"
run-frontend = "backend.frontend_server:main"
streamlit-app = "streamlit_app:main"
